--- a/ESof 3050 Project/src/program/client/LoginChoice.fxml
+++ b/ESof 3050 Project/src/program/client/LoginChoice.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane hgap="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" vgap="10.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="program.client.LoginChoiceController">
+<GridPane hgap="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" vgap="10.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="program.client.SceneController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" />
     <ColumnConstraints hgrow="SOMETIMES" />
@@ -25,7 +25,7 @@
             <Font size="18.0" />
          </font>
       </Button>
-      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#TellerLoginButtonPressed" text="Teller Login" GridPane.columnSpan="2147483647" GridPane.rowIndex="3">
+      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#switchToTellerMainMenu" text="Teller Login" GridPane.columnSpan="2147483647" GridPane.rowIndex="3">
          <font>
             <Font size="18.0" />
          </font>
