--- a/ESof 3050 Project/src/program/client/SampleBalanceFinder.fxml
+++ b/ESof 3050 Project/src/program/client/SampleBalanceFinder.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
@@ -14,32 +15,42 @@
     <ColumnConstraints hgrow="SOMETIMES" />
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints vgrow="SOMETIMES" />
-    <RowConstraints vgrow="SOMETIMES" />
       <RowConstraints vgrow="SOMETIMES" />
+    <RowConstraints vgrow="SOMETIMES" />
+    <RowConstraints vgrow="SOMETIMES" />
     <RowConstraints vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#AccountHolderLoginButtonPressed" text="Account Holder Login" GridPane.columnSpan="2147483647" GridPane.rowIndex="2">
+      <Button mnemonicParsing="false" onAction="#BalanceFinderSubmitButtonPressed" text="Submit" GridPane.columnIndex="1" GridPane.rowIndex="2">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
-      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#switchToTellerMainMenu" text="Teller Login" GridPane.columnSpan="2147483647" GridPane.rowIndex="3">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Button>
-      <Button mnemonicParsing="false" onAction="#EndSessionButtonPressed" text="End Session" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.valignment="TOP">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Button>
-      <Label maxWidth="1.7976931348623157E308" text="Hello! Please Select a Login Option:" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
+      <Label text="Balance" GridPane.rowIndex="3">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
+      <Label text="Account Number" GridPane.rowIndex="1">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <TextField fx:id="AccountNumberField" GridPane.columnIndex="1" GridPane.rowIndex="1">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </TextField>
+      <TextField fx:id="BalanceField" editable="false" focusTraversable="false" GridPane.columnIndex="1" GridPane.rowIndex="3">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </TextField>
+      <Button mnemonicParsing="false" onAction="#CancelButtonPressed" text="Cancel" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.valignment="TOP">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
