--- a/ESof 3050 Project/src/program/client/SampleBalanceFinder.fxml
+++ b/ESof 3050 Project/src/program/client/SampleBalanceFinder.fxml
@@ -36,7 +36,7 @@
             <Font size="18.0" />
          </font>
       </TextField>
-      <Button mnemonicParsing="false" onAction="#CancelButtonPressed" text="Cancel" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.valignment="TOP">
+      <Button mnemonicParsing="false" onAction="#TellerCancelButtonPressed" text="Cancel" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.valignment="TOP">
          <font>
             <Font size="14.0" />
          </font>
