--- a/ESof 3050 Project/src/program/client/NewAccountHolder.fxml
+++ b/ESof 3050 Project/src/program/client/NewAccountHolder.fxml
@@ -10,20 +10,20 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17" fx:controller="src.program.client.BankingClientController">
+<GridPane hgap="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" vgap="10.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="src.program.client.BankingClientController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="300.0" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="300.0" />
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
       <Button mnemonicParsing="false" onAction="#TellerCancelButtonPressed" text="Cancel" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.valignment="TOP">
@@ -86,7 +86,7 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="5" GridPane.valignment="CENTER">
+      <HBox alignment="CENTER" spacing="10.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="5" GridPane.valignment="CENTER">
          <children>
             <TextField fx:id="monthTextField" prefWidth="60.0" promptText="MM">
                <font>
