--- a/ESof 3050 Project/src/program/client/LoginChoice.fxml
+++ b/ESof 3050 Project/src/program/client/LoginChoice.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane hgap="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" vgap="10.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="src.program.client.BankingClientController">
+<GridPane hgap="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" vgap="10.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="src.program.client.BankingClientController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" />
     <ColumnConstraints hgrow="SOMETIMES" />
@@ -38,6 +38,11 @@
       <Label maxWidth="1.7976931348623157E308" text="Hello! Please Select a Login Option:" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
          <font>
             <Font size="18.0" />
+         </font>
+      </Label>
+      <Label text="Login Choice">
+         <font>
+            <Font size="24.0" />
          </font>
       </Label>
    </children>
