--- a/ESof 3050 Project/src/program/client/CardNumberAndPin.fxml
+++ b/ESof 3050 Project/src/program/client/CardNumberAndPin.fxml
@@ -16,61 +16,50 @@
   </columnConstraints>
   <rowConstraints>
     <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
+      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#CardNumberAndPinBackButtonPressed" text="&lt;&lt; Back" GridPane.rowIndex="4">
+         <font>
+            <Font size="18.0" />
+         </font></Button>
+      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#CardNumberAndPinDoneButtonPressed" text="Done &gt;&gt;" GridPane.columnIndex="1" GridPane.rowIndex="4">
+         <font>
+            <Font size="18.0" />
+         </font></Button>
       <Button mnemonicParsing="false" onAction="#TellerCancelButtonPressed" text="Cancel" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.valignment="TOP">
          <font>
             <Font size="14.0" />
          </font></Button>
-      <Label text="Create New Account Holder">
+      <Label text="Card Number" GridPane.rowIndex="2">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Label text="Enter Pin" GridPane.rowIndex="3">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <TextField fx:id="NewCardNumberTextField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="2">
+         <font>
+            <Font size="18.0" />
+         </font></TextField>
+      <TextField fx:id="NewPinTextField" GridPane.columnIndex="1" GridPane.rowIndex="3">
+         <font>
+            <Font size="18.0" />
+         </font></TextField>
+      <Label text="Card Number and Pin">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <Label text="Optionally add addresses to the account holder's profile" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
+      <Label text="Login details for new account holder. Please enter pin." GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#AddressBackButtonPressed" text="&lt;&lt; Back" GridPane.rowIndex="3">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Button>
-      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#AddressNextButtonPressed" text="Next &gt;&gt;" GridPane.columnIndex="1" GridPane.rowIndex="3">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Button>
-      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#AddAddressButtonPressed" text="Add New Address" GridPane.rowIndex="2">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Button>
-      <GridPane GridPane.columnIndex="1" GridPane.rowIndex="2">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Label text="Address(es) Added:">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Label>
-            <TextField prefWidth="30.0" text="0" GridPane.columnIndex="1">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </TextField>
-         </children>
-      </GridPane>
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
