--- a/ESof 3050 Project/src/program/client/NewAddress.fxml
+++ b/ESof 3050 Project/src/program/client/NewAddress.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane hgap="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" vgap="10.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/19">
+<GridPane hgap="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" vgap="10.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="src.program.client.BankingClientController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="300.0" />
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="300.0" />
@@ -65,32 +65,32 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#AddressSubmitButtonPressed" text="Submit" GridPane.columnIndex="1" GridPane.rowIndex="7">
+      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#AddressSubmitButtonPressed" text="Submit" GridPane.columnSpan="2147483647" GridPane.rowIndex="7">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
-      <TextField GridPane.columnIndex="1" GridPane.rowIndex="2">
+      <TextField fx:id="StreetNameTextField" GridPane.columnIndex="1" GridPane.rowIndex="2">
          <font>
             <Font size="18.0" />
          </font>
       </TextField>
-      <TextField GridPane.columnIndex="1" GridPane.rowIndex="3">
+      <TextField fx:id="StreetNumberTextField" GridPane.columnIndex="1" GridPane.rowIndex="3">
          <font>
             <Font size="18.0" />
          </font>
       </TextField>
-      <TextField GridPane.columnIndex="1" GridPane.rowIndex="4">
+      <TextField fx:id="PostalCodeTextField" GridPane.columnIndex="1" GridPane.rowIndex="4">
          <font>
             <Font size="18.0" />
          </font>
       </TextField>
-      <TextField GridPane.columnIndex="1" GridPane.rowIndex="5">
+      <TextField fx:id="ProvinceTextField" GridPane.columnIndex="1" GridPane.rowIndex="5">
          <font>
             <Font size="18.0" />
          </font>
       </TextField>
-      <TextField GridPane.columnIndex="1" GridPane.rowIndex="6">
+      <TextField fx:id="CountryTextField" GridPane.columnIndex="1" GridPane.rowIndex="6">
          <font>
             <Font size="18.0" />
          </font>
