--- a/ESof 3050 Project/src/program/client/AccountHolderMainMenu.fxml
+++ b/ESof 3050 Project/src/program/client/AccountHolderMainMenu.fxml
@@ -18,6 +18,9 @@
     <RowConstraints />
       <RowConstraints vgrow="SOMETIMES" />
     <RowConstraints vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
     <RowConstraints vgrow="SOMETIMES" />
       <RowConstraints vgrow="SOMETIMES" />
       <RowConstraints vgrow="SOMETIMES" />
@@ -31,7 +34,7 @@
             <Font size="14.0" />
          </font>
       </Button>
-      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Option 1" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="3">
+      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#TransferToAnotherAccountHolderButtonPressed" text="Transfer To Another Account Holder" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="6">
          <GridPane.margin>
             <Insets />
          </GridPane.margin>
@@ -39,7 +42,7 @@
             <Font size="18.0" />
          </font>
       </Button>
-      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Option 2" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="4">
+      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#TransferBetweenAccountsButtonPressed" text="Transfer Between Your Accounts" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="7">
          <GridPane.margin>
             <Insets />
          </GridPane.margin>
@@ -57,6 +60,21 @@
             <Font size="24.0" />
          </font>
       </Label>
+      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#ViewAccountsButtonPressed" text="View Accounts" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="3">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
+      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#DepositButtonPressed" text="Deposit" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="4">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
+      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#WithdrawButtonPressed" text="Withdraw" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="5">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
    </children>
    <padding>
       <Insets right="10.0" />
