New GUI screens and linking between them

--- a/ESof 3050 Project/src/program/client/EditProfile.fxml
+++ b/ESof 3050 Project/src/program/client/EditProfile.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane hgap="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" vgap="10.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane hgap="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" vgap="10.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="src.program.client.BankingClientController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="250.0" />
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="250.0" />
@@ -28,7 +28,7 @@
             <Font size="24.0" />
          </font>
       </Label>
-      <Button mnemonicParsing="false" text="Cancel" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.valignment="TOP">
+      <Button mnemonicParsing="false" onAction="#TellerCancelButtonPressed" text="Cancel" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.valignment="TOP">
          <font>
             <Font size="14.0" />
          </font>
@@ -43,22 +43,22 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Delete Profile" GridPane.columnSpan="2147483647" GridPane.rowIndex="5">
+      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#DeleteProfileButtonPressed" text="Delete Profile" GridPane.columnSpan="2147483647" GridPane.rowIndex="5">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
-      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Remove Account" GridPane.columnSpan="2147483647" GridPane.rowIndex="3">
+      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#RemoveAccountButtonPressed" text="Remove Account" GridPane.columnSpan="2147483647" GridPane.rowIndex="3">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
-      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Add Account" GridPane.columnSpan="2147483647" GridPane.rowIndex="2">
+      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#AddAccountButtonPressed" text="Add Account" GridPane.columnSpan="2147483647" GridPane.rowIndex="2">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
-      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="View Addresses" GridPane.columnSpan="2147483647" GridPane.rowIndex="4">
+      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#ViewAddressesButtonPressed" text="View Addresses" GridPane.columnSpan="2147483647" GridPane.rowIndex="4">
          <font>
             <Font size="18.0" />
          </font>
