--- a/ESof 3050 Project/src/program/client/TellerLogin.fxml
+++ b/ESof 3050 Project/src/program/client/TellerLogin.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -53,17 +54,17 @@
             <Font size="18.0" />
          </font>
       </TextField>
-      <TextField fx:id="TellerPasswordTextField" GridPane.columnIndex="1" GridPane.rowIndex="2">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </TextField>
       <Label fx:id="TellerLoginErrorLabel" GridPane.rowIndex="4" />
       <TextArea fx:id="TellerLoginErrorTextArea" prefHeight="20.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="4">
          <font>
             <Font size="14.0" />
          </font>
       </TextArea>
+      <PasswordField fx:id="TellerPasswordField" GridPane.columnIndex="1" GridPane.rowIndex="2">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </PasswordField>
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
