--- a/ESof 3050 Project/src/program/client/CreateAccount.fxml
+++ b/ESof 3050 Project/src/program/client/CreateAccount.fxml
@@ -27,12 +27,12 @@
             <Font size="24.0" />
          </font>
       </Label>
-      <Button mnemonicParsing="false" onAction="#SelectAccountHolderButtonPressed" text="Cancel" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.valignment="TOP">
+      <Button mnemonicParsing="false" onAction="#EditCancelButtonPressed" text="Cancel" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.valignment="TOP">
          <font>
             <Font size="14.0" />
          </font>
       </Button>
-      <TextField fx:id="TellerCardNumberTextField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="1">
+      <TextField fx:id="EditCardNumberTextField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="1">
          <font>
             <Font size="18.0" />
          </font>
