--- a/ESof 3050 Project/src/program/client/Pin.fxml
+++ b/ESof 3050 Project/src/program/client/Pin.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -18,6 +19,7 @@
     <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
       <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#PinBackButtonPressed" text="&lt;&lt; Back" GridPane.rowIndex="2">
@@ -45,6 +47,7 @@
             <Font size="24.0" />
          </font>
       </Label>
+      <TextArea fx:id="PinErrorTextArea" prefHeight="20.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="3" />
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
