--- a/ESof 3050 Project/src/program/client/CreateAccountConfirmation.fxml
+++ b/ESof 3050 Project/src/program/client/CreateAccountConfirmation.fxml
@@ -2,9 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -24,7 +22,7 @@
       <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Label text="Create Account">
+      <Label text="Create Account Confirmation" GridPane.columnSpan="2147483647">
          <font>
             <Font size="24.0" />
          </font>
@@ -49,13 +47,26 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <ChoiceBox fx:id="AccountTypeChoiceBox" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#CreateAccountButtonPressed" text="Create Account" GridPane.columnSpan="2147483647" GridPane.rowIndex="3">
+      <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#EditCancelButtonPressed" text="Done" GridPane.columnSpan="2147483647" GridPane.rowIndex="4">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
-      <TextArea fx:id="ErrorTextArea" prefHeight="20.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="4" />
+      <TextField fx:id="AccountTypeConfirmationTextField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="2">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </TextField>
+      <Label text="Account Number" GridPane.rowIndex="3">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <TextField fx:id="AccountNumberConfirmationTextField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="3">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </TextField>
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
