--- a/ESof 3050 Project/src/program/client/AccountViewer.fxml
+++ b/ESof 3050 Project/src/program/client/AccountViewer.fxml
@@ -44,7 +44,7 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <TextField fx:id="AccountsCardNumberTextField">
+            <TextField fx:id="EditCardNumberTextField">
                <font>
                   <Font size="14.0" />
                </font>
