--- a/ESof 3050 Project/src/program/client/DeleteProfile.fxml
+++ b/ESof 3050 Project/src/program/client/DeleteProfile.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -18,6 +19,7 @@
   <rowConstraints>
     <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
@@ -47,6 +49,7 @@
          </font>
       </Button>
       <CheckBox fx:id="DeleteProfileCheckBox" mnemonicParsing="false" text="I am sure I want to delete this profile" GridPane.rowIndex="2" />
+      <TextArea fx:id="ErrorTextArea" editable="false" prefHeight="20.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="3" />
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
