--- a/ESof 3050 Project/src/program/client/DeleteAccount.fxml
+++ b/ESof 3050 Project/src/program/client/DeleteAccount.fxml
@@ -57,7 +57,7 @@
          </font>
       </Label>
       <ChoiceBox fx:id="DeleteAccountChoiceBox" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-      <TextArea fx:id="ErrorTextArea" prefHeight="20.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="4" />
+      <TextArea fx:id="ErrorTextArea" editable="false" prefHeight="20.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="4" />
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
