--- a/ESof 3050 Project/src/program/client/LOCAccount.fxml
+++ b/ESof 3050 Project/src/program/client/LOCAccount.fxml
@@ -54,7 +54,7 @@
             <Font size="18.0" />
          </font>
       </Button>
-      <TextArea fx:id="ErrorTextArea" prefHeight="20.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="5" />
+      <TextArea fx:id="ErrorTextArea" editable="false" prefHeight="20.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="5" />
       <TextField fx:id="CreditLimitTextField" GridPane.columnIndex="1" GridPane.rowIndex="2">
          <font>
             <Font size="18.0" />
