--- a/ESof 3050 Project/src/program/client/NewAddress.fxml
+++ b/ESof 3050 Project/src/program/client/NewAddress.fxml
@@ -97,7 +97,7 @@
             <Font size="18.0" />
          </font>
       </TextField>
-      <TextArea fx:id="AddressErrorTextArea" prefHeight="20.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="8" />
+      <TextArea fx:id="AddressErrorTextArea" editable="false" prefHeight="20.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="8" />
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
