--- a/ESof 3050 Project/src/program/client/Pin.fxml
+++ b/ESof 3050 Project/src/program/client/Pin.fxml
@@ -47,7 +47,7 @@
             <Font size="24.0" />
          </font>
       </Label>
-      <TextArea fx:id="PinErrorTextArea" prefHeight="20.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="3" />
+      <TextArea fx:id="PinErrorTextArea" editable="false" prefHeight="20.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="3" />
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
