--- a/ESof 3050 Project/src/program/client/TransferToAnotherAccountHolder.fxml
+++ b/ESof 3050 Project/src/program/client/TransferToAnotherAccountHolder.fxml
@@ -67,7 +67,7 @@
             <Font size="18.0" />
          </font>
       </TextField>
-      <TextArea fx:id="ErrorTextArea" prefHeight="20.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="5" />
+      <TextArea fx:id="ErrorTextArea" editable="false" prefHeight="20.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="5" />
       <TextField fx:id="SenderBalanceTextField" editable="false" GridPane.columnIndex="2" GridPane.rowIndex="1">
          <font>
             <Font size="18.0" />
